fix scrollbar textarea

--- a/html/sass/components/_jquery.jscrollpane.scss
+++ b/html/sass/components/_jquery.jscrollpane.scss
@@ -58,7 +58,7 @@
 	top: 0;
 	left: 0;
 	cursor: pointer;
-    width: 70%;
+    width: 8px;
     margin: auto;
     margin-top: 2px;
 }
